--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.Moneymind"
         tools:targetApi="31">
         <activity
+            android:name=".Add_Records"
+            android:exported="true" />
+        <activity
             android:name=".Records"
             android:exported="true" />
-
         <activity
             android:name=".Splashscreen"
             android:exported="true">
@@ -27,10 +29,10 @@
         </activity>
         <activity
             android:name=".Registration"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
