--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Moneymind"
         tools:targetApi="31">
         <activity
+            android:name=".Add_account_page"
+            android:exported="false" />
+        <activity
             android:name=".Account_page"
             android:exported="true" />
         <activity
